--- a/style.css
+++ b/style.css
@@ -1,9 +1,44 @@
-* {
+/* Style the video: 100% width and height to cover the entire window */
+#myVideo {
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  min-width: 100%;
+  min-height: 100%;
+}
+
+/* Add some content at the bottom of the video/page */
+.content {
+  position: fixed;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.5);
+  color: #f1f1f1;
+  width: 100%;
+  padding: 20px;
+}
+
+/* Style the button used to pause/play the video */
+#myBtn {
+  width: 200px;
+  font-size: 18px;
+  padding: 10px;
+  border: none;
+  background: #000;
+  color: #fff;
+  cursor: pointer;
+}
+
+#myBtn:hover {
+  background: #ddd;
+  color: black;
+}
+        * {
   padding: 0;
   margin: 0;
 }
 
 main {
+   
   background-color: #eee;
   height: 100vh;
   padding: 10px;
@@ -13,7 +48,7 @@ main {
   max-width: 960px;
   display: block;
   position: relative;
-  background-color: #fff;
+  background-color: rgba(255, 255, 255, 0.238);
   padding: 23px 26px;
   margin: 0 auto 10px auto;
   box-shadow: 0 2px 6px 0 rgba(0, 0, 0, .1 )
@@ -48,5 +83,5 @@ main {
   right: 26px;
   font-family: "Helvetica", Arial, sans-serif;
   font-weight: 900;
-  color: #333;
+  color: rgb(255, 255, 255);
 }
